css/style.css
/* ... */
.advantages-items-box {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

.advantages-item:not(:last-child) {
  margin-right: 20px;
  margin-bottom: 20px;
}
.advantages-item:hover .advantages-item__number {
  color: #EE7828;
  transition: all 0.2s;
}
.advantages-item:hover .advantages-item__text {
  color: #EE7828;
  transition: all 0.2s;
}
.advantages-item__number {
  font-family: "Montserrat-Bold";
  font-size: 100px;
  color: #EEF2F6;
  transition: all 0.2s;
}
.advantages-item__text {
  font-family: "ActayWide";
  font-size: 25px;
  max-width: 423px;
  background: white;
  padding: 5px 0px;
  position: relative;
  z-index: 2;
  transform: translateY(-30px);
  transition: all 0.2s;
  line-height: 1.3em;
  color: #2C2C2C;
}

.info-section {
  padding: 90px 0px 100px 0px;
}
.info-section__desc {
  display: flex;
  flex-direction: row;
}
.info-section__img {
  border-radius: 20px;
}
.info-section__text {
  font-size: 16px;
  line-height: 1.3em;
  font-family: "Montserrat-Medium";
  display: flex;
  flex-direction: row;
  color: #2C2C2C;
}
.info-section__text:not(:last-child) {
  margin-bottom: 20px;
}
.info-section__text::before {
  content: "";
  background: url("../icons/arrow-small-orange-right.svg") center/cover no-repeat;
  display: block;
  width: 11.5px;
  height: 8px;
  margin-right: 10.5px;
  flex-shrink: 0;
  transform: translateY(6px);
}
.info-section__text_desc {
  margin-right: 30px;
}

.business-section {
  padding: 90px 0px 100px 0px;
}

.business-goals-box {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 20px;
}

.business-goal {
  padding: 27px 23px;
  border-radius: 20px;
  width: calc((100% - 20px) / 2);
}
.business-goal__circle-box {
  display: flex;
  flex-direction: row;
  margin-bottom: 15px;
}
.business-goal__circle {
  background: #EE7828;
  width: 20px;
  height: 20px;
  border-radius: 100%;
}
.business-goal__title {
  font-size: 25px;
  font-family: "ActayWide";
  margin-bottom: 10px;
  line-height: 1.3em;
  color: #2C2C2C;
}
.business-goal__desc {
  font-size: 16px;
  line-height: 1.3em;
  font-family: "Montserrat-Regular";
  max-width: 373px;
  color: #2C2C2C;
}
.business-goal_orange {
  border: 1px solid #EE7828;
}
.business-goal_blue {
  background: #EEF2F6;
}

.form-section {
  padding: 90px 0px 100px 0px;
  display: flex;
  justify-content: flex-end;
  position: relative;
}
.form-section__main {
  border-top-left-radius: 20px;
  border-bottom-left-radius: 20px;
  background: #37211C;
  padding: 56px 0px 45px 26px;
  display: flex;
  flex-direction: row;
  position: relative;
  width: 100%;
  justify-content: space-between;
  align-items: center;
}
.form-section__img {
  border-top-left-radius: 20px;
  border-bottom-left-radius: 20px;
  max-width: 100%;
}
.form-section__left {
  margin-right: 32px;
}
.form-section__text {
  color: white;
  font-size: 20px;
  font-family: "Montserrat-SemiBold";
  margin-bottom: 30px;
  max-width: 513px;
  line-height: 1.3em;
}

.form-service__box {
  position: absolute;
  border-top-left-radius: 20px;
  border-bottom-left-radius: 20px;
  background: #37211C;
  padding: 78px 54px 78px 39px;
  display: flex;
  flex-direction: row;
  align-items: center;
  right: -122%;
  transition: all 0.4s;
}
.form-service__box_open {
  right: -17px;
  transition: all 0.4s;
}
.form-service__box-left {
  margin-right: 105px;
}
.form-service__input-box {
  width: 400px;
  height: 50px;
  position: relative;
  margin-bottom: 34px;
}
.form-service__input-box::before {
  content: "";
  display: block;
  position: absolute;
  left: 22px;
  top: 50%;
  transform: translateY(-50%);
}
.form-service__input-box_name::before {
  width: 21px;
  height: 25px;
  background: url("../icons/human-form.svg") center/cover no-repeat;
}
.form-service__input-box_phone::before {
  width: 26px;
  height: 26px;
  background: url("../icons/globe-form.svg") center/cover no-repeat;
}
.form-service__input-box_email::before {
  width: 25px;
  height: 18px;
  background: url("../icons/letter-form.svg") center/cover no-repeat;
}
.form-service__input {
  width: 100%;
  height: 100%;
  border: 1px solid white;
  background: transparent;
  border-radius: 30px;
  color: white;
  font-size: 16px;
  font-family: "Montserrat-Medium";
  padding: 16px 16px 16px 59px;
}

.work-section {
  padding: 90px 0px 100px 0px;
}
.work-section__list {
  margin-bottom: 20px;
  padding-left: 40px;
  list-style: disc;
}
.work-section__list-item {
  font-size: 16px;
  font-family: "Montserrat-Medium";
  line-height: 1.3em;
  color: #2C2C2C;
}
.work-section__list-item:not(:last-child) {
  margin-bottom: 10px;
}
.work-section__text {
  font-size: 16px;
  font-family: "Montserrat-Medium";
  line-height: 1.3em;
  margin-bottom: 30px;
  color: #2C2C2C;
}
.work-section__text_italic {
  font-family: "Montserrat-MediumItalic";
}
.work-section__text_semibold {
  font-family: "Montserrat-SemiBold";
  margin-bottom: 20px;
}

.cases-section {
  padding: 90px 0px 100px 0px;
}

.stages-section {
  padding: 90px 0px 100px 0px;
}

.swiper-pagination {
  position: relative;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-bottom: 20px;
}

.swiper-pagination-bullet {
  background: #FEF8F4;
  height: 3px;
  width: 190px;
  border-radius: 10px;
  opacity: 1;
}
.swiper-pagination-bullet-active {
  background: #EE7828;
}

.swiper-button-next, .swiper-button-prev {
  margin-top: 0;
}
.swiper-button-next::after, .swiper-button-prev::after {
  color: #EE7828;
  font-size: 16px;
  font-weight: 800;
}

.swiper-button-prev {
  margin-right: 40px;
}
.swiper-button-prev::after {
  position: absolute;
  left: 45%;
  transform: translateX(-50%);
}

.swiper-button-next::after {
  position: absolute;
  right: 25%;
  transform: translateX(-50%);
}

.slider-cases {
  max-width: 865px;
  overflow: hidden;
  padding-right: 5px;
}
.slider-cases__btns {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  padding-right: 101px;
}
/* ... */

